Fixed horizontal scroll problem

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 .flexContainerRow1 {
   display: flex;
   height: 878px;
+  overflow: hidden;
 }
 
 #mainImgLayout {
